--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="accordion-item ">
               <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                  Which are the Popular Wedding Anniversary Venues in XYZ ?
+                  Which are the Popular Wedding Anniversary Venues at Miraculous ?
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
@@ -297,7 +297,7 @@
             <div class="accordion-item border-top">
               <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  What are the facilities available in Wedding Anniversary Venues in XYZ?
+                  What are the facilities available in Wedding Anniversary Venues in Miraculous?
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
@@ -315,7 +315,11 @@
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>Maintaining healthy environment. </strong> Consider limiting the number of people who occupy the restroom at one time to allow for physical distancing.
+                  Ensure that people standing in line can maintain a 6-foot distance from one another. It may be helpful to post signs or markers to help attendees maintain the appropriate physical distance of at least 6 feet.
+                  Ensure that open restrooms are:
+                  Operational with functional toilets.
+                  Cleaned and disinfected regularly, particularly high-touch surfaces such as faucets, toilets, stall doors, doorknobs, countertops, diaper changing tables, and light switches.
                 </div>
               </div>
             </div>
